fix: dashboard flicker & improvements (#1022)
* fix flickering

* workaround fixing flicker

* use gray radix variant for scrollbar color

* biome

--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -52,6 +52,17 @@ html {
 	background-color: #f2f2f2;
 }
 
+.dashboard-grid {
+	display: grid;
+	grid-template-columns: auto 1fr 1fr;
+	grid-template-areas:
+		"sidebar main main"
+		"sidebar main main";
+	height: 100dvh;
+	width: 100vw;
+	min-height: 100dvh;
+}
+
 .left-perspective {
 	transform: scale(1.2) rotateX(47deg) rotateY(31deg) rotate(324deg);
 }
@@ -66,9 +77,8 @@ html {
 	border-radius: 10px;
 }
 
-/* Handle */
 ::-webkit-scrollbar-thumb {
-	background: rgb(116, 116, 116);
+	background: var(--gray-7);
 	border-radius: 10px;
 }
 
@@ -289,6 +299,15 @@ a.bg-primary:hover {
 		linear-gradient(#fff 0 0);
 	-webkit-mask-composite: xor;
 	mask-composite: exclude;
+}
+
+@media all and (max-width: 1024px) {
+	.dashboard-grid {
+		grid-template-columns: 1fr;
+		grid-template-areas:
+			"main"
+			"main";
+	}
 }
 
 @media (prefers-color-scheme: dark) {
